<?xml version="1.0"?>
<package format="3">
  <name>ros2_to_rlds_msgs</name>
  <version>1.0.1</version>
  <description>messages for dexnex</description>
  <maintainer email="toby.buckley@northwestern.edu">Toby Buckley</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
